<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/action_tool_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toTopOf="@+id/txt_earn_coins"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:background="?attr/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>

  </androidx.appcompat.widget.Toolbar>

  <TextView
      android:id="@+id/txt_earn_coins"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rules_string"
      android:textAlignment="center"
      android:textSize="15sp"

      app:layout_constraintTop_toBottomOf="@id/action_tool_bar"
      android:layout_marginTop="100dp"

      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"/>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/dice_game_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      app:layout_constraintVertical_bias="0.3"

      app:layout_constraintTop_toBottomOf="@id/txt_earn_coins"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/txt_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/initial_coins"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_die"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_die"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_die_face"
        android:textSize="50sp"
        android:textColor="?attr/colorSecondary"
        android:background="?attr/colorPrimary"

        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/txt_coins"
        app:layout_constraintBottom_toTopOf="@id/txt_prev_roll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_prev_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_prev_roll"

        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/btn_die"
        app:layout_constraintBottom_toTopOf="@id/single_sixes_total_rolls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/single_sixes_total_rolls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/txt_prev_roll"
        app:layout_constraintBottom_toTopOf="@id/double_sixes_double_others"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/txt_single_sixes"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:text="@string/initial_sixes_rolled"
          android:layout_marginEnd="10dp"/>

      <TextView
          android:id="@+id/txt_total_rolls"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:text="@string/initial_total_rolls"

          android:layout_marginStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/double_sixes_double_others"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@id/single_sixes_total_rolls"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/txt_double_sixes"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:text="@string/initial_double_sixes"
          android:layout_marginEnd="10dp"
          android:textColor="@color/green"/>

      <TextView
          android:id="@+id/txt_double_others"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:text="@string/initial_double_others"
          android:textColor="@color/red"

          android:layout_marginStart="10dp"/>
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>